2000-08-01  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* configure.in:
	    Modifications on how NDBM vs. GDBM vs. BSD DB libraries
	    are linked to ZMailer.  NDBM must be explicitely linked
	    as '-lc' if it is at libc, *and* that linkage reference
	    must be before any other as only then will there be change
	    to get real NDBM, and not some fake layers which all those
	    others do provide!

2000-07-31  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* scheduler/scheduler.h, scheduler/scheduler.c, scheduler/msgerror.c:
	    Recognize our internal NOTIFY=TRACE flag.

	* transports/smtp/smtp.c:
	    When 'NOTIFY=TRACE' flag is present, don't send it out
	    as it is our INTERNAL thing.  Thus the change from string
	    based output to flag-based output routine.

	* include/ta.h, include/mailer.h, include/libz.h:
	    Moved  STREQ()/STREQN()/CISTREQ()/CISTREQN()  macroes
	    from  mailer.h (and ta.h)  to libz.h.

	* utils/md5sum.c:
	    Completed  usage()  function, and some comments.

	* compat/sendmail/sendmail.c:
	    Added acceptance for our internal  -N TRACE flag, which
	    is for eased debugging of RFC 2852 features.

2000-07-30  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* libident/identuser.c:
	    A buglet in read loop.  The 'break' affects only
	    the innermost loop construct, and it needed to go
	    out the outer too..  Nuisance think, I would say.
	    (And usage of indent is questionable anyway..)

	* smtpserver/smtpserver.h, smtpserver/smtpcmds.c,
	  smtpserver/cfgread.c, smtpserver/smtpserver.c,
	  include/ta.h, transports/libta/ctlopen.c:
	    Initial hooks for RFC 2852.

	* transports/libta/diagnostic.c:
	    Turn on, temporarily, O_APPEND flag on the file.

	* scheduler/msgerror.c:
	    Missed variable inits, and malformed format statement.

	* transports/smtp/getmxrr.c:
	    dnscache by djb produces replies which don't have NS or AD
	    sections, and when scanning replies, we had one-off comparison