@@ -1,5 +1,9 @@
 2000-08-01  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>
 
+	* transports/smtp/smtp.c:
+	    Some debug printout revisions.  Somewhat embarassing to have
+	    a SEGV at debug code when work-code without it works..
+
 	* configure.in:
 	    Modifications on how NDBM vs. GDBM vs. BSD DB libraries
 	    are linked to ZMailer.  NDBM must be explicitely linked
